apps/base/weather/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weather-route
  namespace: weather
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-ingress
      sectionName: http
  hostnames:
    - weather.local.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: weather
          namespace: weather
          port: 80
